--- a/assets/style/public.scss
+++ b/assets/style/public.scss
@@ -1,5 +1,32 @@
 @import './reset.scss';
-
-html, body{
+html,
+body {
     background-color: #f5f5f5;
+}
+
+input,
+textarea {
+    outline: none;
+}
+
+a {
+    color: inherit;
+}
+
+.process {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 1px;
+    z-index: 1000;
+    span {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 0%;
+        height: 1px;
+        background-color: orangered;
+        transition: opacity 2s;
+    }
 }
