--- a/src/component/editor/index.scss
+++ b/src/component/editor/index.scss
@@ -19,7 +19,6 @@ $lightColor: #0081FF;
 .md-panel {
     display: block;
     position: relative;
-    margin-top: 40px;
     border: 1px solid #ccc;
     border-radius: 3px;
     font-size: 14px;
@@ -96,7 +95,6 @@ $lightColor: #0081FF;
         width: 36px;
         height: 36px;
         text-align: center;
-        padding: 9px 0;
         cursor: pointer;
         color: #aaa;
         &:hover,
@@ -180,12 +178,62 @@ $lightColor: #0081FF;
 
 .fa {
     display: inline-block;
-    width: 100%;
-    height: 100%;
+    height: 22px;
+    line-height: 22px;
+    width: 22px;
+    margin-top: 7px;
     background-repeat: no-repeat;
     background-size: 100%;
 }
 
 .fa-bold {
-    background-image: resolve('editor/bold.svg');
+    background-image: url('../../../assets/image/editor/bold.svg');
+}
+
+.fa-italic {
+    background-image: url('../../../assets/image/editor/italic.svg');
+}
+
+.fa-link {
+    background-image: url('../../../assets/image/editor/link.svg');
+}
+
+.fa-outdent {
+    background-image: url('../../../assets/image/editor/quote.svg');
+}
+
+.fa-code {
+    background-image: url('../../../assets/image/editor/code.svg');
+}
+
+.fa-picture-o {
+    background-image: url('../../../assets/image/editor/photo.svg');
+}
+
+.fa-list-ol {
+    background-image: url('../../../assets/image/editor/list_numbered.svg');
+}
+
+.fa-list-ul {
+    background-image: url('../../../assets/image/editor/list_bulleted.svg');
+}
+
+.fa-header {
+    background-image: url('../../../assets/image/editor/title.svg');
+}
+
+.fa-eye {
+    background-image: url('../../../assets/image/editor/eye.svg');
+}
+
+.fa-columns {
+    background-image: url('../../../assets/image/editor/sceen.svg');
+}
+
+.fa-pencil {
+    background-image: url('../../../assets/image/editor/edit.svg');
+}
+
+.fa-arrows-alt {
+    background-image: url('../../../assets/image/editor/fullscreen.svg');
 }
