--- a/src/component/header/index.scss
+++ b/src/component/header/index.scss
@@ -1,44 +1,84 @@
-.header{
+.header {
     display: flex;
-    justify-content: space-between;
-    align-content: center;
+    align-items: center;
     height: 60px;
     background-color: #fff;
     position: relative;
 }
 
-.header-left, .header-right{
+.header-title {
+    font-size: 24px;
+    flex: 1;
+}
+
+.header-left,
+.header-right {
     height: 60px;
     width: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
-    img{
+    img {
         width: 30px;
         height: 30px;
     }
 }
 
-.header-right{
-    img{
+.header-right {
+    img {
         width: 24px;
         height: 24px;
     }
 }
 
-.nav{
+.nav {
     width: 200px;
     position: absolute;
     left: 0;
     top: 60px;
     background: #fff;
-    box-shadow: 3px 3px 10px #888888;
+    box-shadow: 0 0 8px rgba(0, 0, 0, .1);
     z-index: 100;
-    li{
+    li {
         height: 40px;
         line-height: 40px;
         padding-left: 20px;
-        border-top: 1px solid #ddd;
+        color: #666;
+    }
+    li:hover {
+        background-color: #f5f5f5
+    }
+    a {
+        display: flex;
+        text-decoration: none;
+        display: flex;
+        align-items: center;
+        span {
+            width: 20px;
+            height: 20px;
+            background-repeat: no-repeat;
+            background-size: contain;
+            margin-right: 16px;
+        }
     }
 }
 
+.li-home {
+    background-image: url(../../../assets/image/svg/home.svg);
+}
+
+.li-writer {
+    background-image: url(../../../assets/image/svg/write.svg);
+}
+
+.li-categorise {
+    background-image: url(../../../assets/image/svg/categorise.svg);
+}
+
+.li-login {
+    background-image: url(../../../assets/image/svg/user.svg);
+}
+
+.li-about {
+    background-image: url(../../../assets/image/svg/about.svg);
+}
