完善登录状态

--- a/src/container/home/index.scss
+++ b/src/container/home/index.scss
@@ -16,5 +16,37 @@
         background: #fff;
         margin: 10px;
         padding: 20px;
+        transition: all .2s;
+        cursor: pointer;
+        &:hover{
+             box-shadow: 0 1px 2px rgba(0,0,0,0.05),0 2px 6px rgba(0,0,0,0.05),0 8px 48px rgba(0,0,0,0.1);
+        }
+        h2{
+            font-size: 22px;
+            font-weight: bold;
+            position: relative;
+            padding: 10px 0;
+            margin-bottom: 20px;
+            &:after{
+                content: "";
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                width: 20px;
+                height: 4px;
+                background-color: #ea6f5a;
+            }
+        }
+        .article-excerpt{
+            color: #666;
+            font-size: 14px;
+            line-height: 28px;
+            word-wrap: break-word;
+        }
+        .read-more{
+            display: inline-block;
+            padding-top: 20px;
+            font-size: 14px;
+        }
     }
 }
