--- a/src/container/article/github-markdown.css
+++ b/src/container/article/github-markdown.css
@@ -317,7 +317,6 @@
   padding-left: 0;
   margin-top: 0;
   margin-bottom: 0;
-  list-style: initial !important;
 }
 
 .markdown-body ol ol,
@@ -434,10 +433,11 @@
 }
 
 .markdown-body blockquote {
-  padding: .8em;
+  padding: 0 1em;
   color: #6a737d;
-  border-left: 0.25em solid #D4D5D9;
+  border-left: 0.25em solid #dfe2e5;
   background-color: #f6f8fa;
+  padding: 16px;
 }
 
 .markdown-body blockquote>:first-child {
