--- a/src/template/index.html
+++ b/src/template/index.html
@@ -10,6 +10,8 @@
     <meta name="full-screen" content="yes">
     <meta name="x5-fullscreen" content="true">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link href="http://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet">
+    <script src="http://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>
 </head>
 
 <body>
