--- a/src/component/header/index.scss
+++ b/src/component/header/index.scss
@@ -18,16 +18,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    img {
-        width: 30px;
-        height: 30px;
-    }
-}
-
-.header-right {
-    img {
-        width: 24px;
-        height: 24px;
+    svg {
+        font-size: 36px;
     }
 }
 
@@ -44,6 +36,10 @@
         line-height: 40px;
         padding-left: 20px;
         color: #666;
+        svg{
+            font-size: 20px;
+            margin-right: 14px;
+        }
     }
     li:hover {
         background-color: #f5f5f5
@@ -62,23 +58,6 @@
         }
     }
 }
-
-.li-home {
-    background-image: url(../../../assets/image/svg/home.svg);
-}
-
-.li-writer {
-    background-image: url(../../../assets/image/svg/write.svg);
-}
-
-.li-categorise {
-    background-image: url(../../../assets/image/svg/categorise.svg);
-}
-
-.li-login {
-    background-image: url(../../../assets/image/svg/user.svg);
-}
-
 .li-about {
     background-image: url(../../../assets/image/svg/about.svg);
 }
